[project]
name = "project-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "алексей федулов",email = "fab-78@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"
pytest = "^8.4.1"